--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for@category, url: categories_path, html: { multipart: true } do |f| %>
+<%= form_for@category,  html: { multipart: true } do |f| %>
  
   <% if @category.errors.any? %>
     <div id="error_explanation">
@@ -26,7 +26,7 @@
 </div>
   <div class="field">
     <%= f.label :image %><br>
-    <%= f.file_field :image, class: "form-control" %> 
+    <%= f.file_field :image%> 
   </div>
  
   
