--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @category %> |
-<%= link_to 'Back', categories_path %>
+<%= link_to 'Просмотреть', @category %> |
+<%= link_to 'Назад', categories_path %>
