--- a/app/views/properties/edit.html.erb
+++ b/app/views/properties/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @property %> |
-<%= link_to 'Back', properties_path %>
+<%= link_to 'Просмотреть', @property %> |
+<%= link_to 'Назад', properties_path %>
