--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for@product, url: products_path, html: { multipart: true } do |f| %>
+<%= form_for@product,  html: { multipart: true } do |f| %>
  
   <% if @product.errors.any? %>
     <div id="error_explanation">
@@ -59,7 +59,7 @@
  
     <div class="field">
     <%= f.label :image %><br>
-    <%= f.file_field :image, class: "form-control" %> 
+    <%= f.file_field :image %> 
   </div>
   <div class="actions">
     <%= f.submit %>
