--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -21,7 +21,9 @@
         <li><a href="/properties">Реквизиты товаров</a></li>
         <li><a href="/products">Продукты</a></li>
         <li><a href="/categories">Категории</a></li>
+
         <li><a href="#">Статьи</a></li>
+         <li><a href = "/orders">Заказы</a></li>
       </ul>
     </div>
   </div>
