--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New product</h1>
+<h3>Создание товара</h3>
 
 <%= render 'form' %>
+<br>
 
-<%= link_to 'Back', products_path %>
+<%= link_to 'Назад', products_path %>
