admin articles, content, ckeditor, modalfix

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -22,7 +22,7 @@
         <li><a href="/products">Продукты</a></li>
         <li><a href="/categories">Категории</a></li>
 
-        <li><a href="#">Статьи</a></li>
+        <li><a href="/articles">Статьи</a></li>
          <li><a href = "/orders">Заказы</a></li>
       </ul>
     </div>
