--- a/app/views/products/_newatt.html.erb
+++ b/app/views/products/_newatt.html.erb
@@ -1,4 +1,8 @@
+<div class="modal-dialog modal-sm">
+      <div class="modal-content">
 <div class = "modal-header">
 Новое свойство
 </div>
 <%= render "attform" %>
+</div>
+</div>
