--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<div style = "width:200px; margin:auto">
 <h2>Регистрация</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -47,3 +48,5 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+</div>
