--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -10,8 +10,21 @@
 
 <div class="container">
 <br>
-АДМИНКА (вы вошли как)
-<br>
+<strong>Панель администрирования</strong>
+
+
+  <% if user_signed_in? %>
+   ( Вы вошли как  <%= current_user.email %> )
+  <%= link_to('Выход', destroy_user_session_path, :method => :delete) %>   
+  <br>     
+  
+<% else %>
+  <%= link_to('Авторизация', new_user_session_path)  %>  &nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp
+  <%= link_to('Регистрация', new_user_registration_path)  %> 
+  
+      &nbsp&nbsp&nbsp
+      &nbsp&nbsp&nbsp 
+<% end %>
 <br>
 <nav class="navbar navbar-default">
   <div class="container-fluid">
