--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,16 +1,16 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Articles</h1>
+<h2>Статьи</h2>
 
 <table>
   <thead>
     <tr>
-      <th>Title</th>
+      <th>Название</th>
      
-      <th>Description</th>
-      <th>Isnew</th>
-      <th>Isreview</th>
-      <th>Onhomepage</th>
+      <th>Краткое описание</th>
+      <th>Новость</th>
+      <th>Обзор</th>
+      <th>На главной</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -24,9 +24,9 @@
         <td><%= article.isNew %></td>
         <td><%= article.isReview %></td>
         <td><%= article.onHomePage %></td>
-        <td><%= link_to 'Show', article %></td>
-        <td><%= link_to 'Edit', edit_article_path(article) %></td>
-        <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Просмотр', article %></td>
+        <td><%= link_to 'Редактировать', edit_article_path(article) %></td>
+        <td><%= link_to 'Удалить', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -34,4 +34,4 @@
 
 <br>
 
-<%= link_to 'New Article', new_article_path %>
+<%= link_to 'Добавить статью', new_article_path %>
