add home link to catalog layout

--- a/app/views/layouts/catalog.html.erb
+++ b/app/views/layouts/catalog.html.erb
@@ -42,7 +42,9 @@
     </div>
   </div>
   <div class="header">
+  <a href = "/">
   <%= image_tag('listLogo.png', :style => "margin:8px 0px 0px 10px")%>
+  </a>
   <div class = "headerSearch">
 
 
