add products to articles, add content menu

--- a/app/assets/stylesheets/admin.css
+++ b/app/assets/stylesheets/admin.css
@@ -1,4 +1,8 @@
-
+/*
+ *= require slimbox2
+ *= require chosen
+ *= require chosen/bootstrap
+ */
 /*!
  * Bootstrap v3.3.5 (http://getbootstrap.com)
  * Copyright 2011-2015 Twitter, Inc.
