--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1045,7 +1045,7 @@ width: 340px;
 	width: 690px;
 	/*margin: 5px 0px 10px 10px;*/
 	padding:  10px 0px 10px 10px;
-	font-size:15px;
+	font-size:14px;
 	color: #333333;
 	margin-bottom: 10px;
 	/*margin: 1px 10px 10px 25px;	*/ 
@@ -1059,5 +1059,14 @@ width: 340px;
 .weekChoiceTitle a{
 	text-decoration: none; 
 	color: #333333;
+}
+
+.homeNewsDescription{
+	
+	
+	width:200px; 
+	
+	height: 55px; 
+	overflow: hidden;
 }
 
